--- a/Practica No.3 Propuestas de FrontEnd/login/loginC.css
+++ b/Practica No.3 Propuestas de FrontEnd/login/loginC.css
@@ -13,12 +13,13 @@ body {
   width: 400px;
   height: 340px;
   background: #4e4d4d;
+  text-decoration-color: #ffffff;
   margin: auto;
   margin-top: 180px;
-  box-shadow: 7px 13px 37px #000;
+  box-shadow: 3px 1px 7px #000000;
   padding: 20px 30px;
   border-top: 4px solid #017bab;
-  color: rgb(230, 214, 255);
+  color: rgb(195, 252, 255);
 }
 
 .form-login h5 {
@@ -32,10 +33,10 @@ body {
 
 .controls {
   width: 100%;
-  border: 1px solid #017bab;
+  border: 1px solid #19191a;
   margin-bottom: 15px;
   padding: 11px 10px;
-  background: #252323;
+  background: #3e3d3d;
   font-size: 14px;
   font-weight: bold;
 }
@@ -45,7 +46,7 @@ body {
   height: 40px;
   background: #017bab;
   border: none;
-  color: white;
+  color: rgb(255, 255, 255);
   margin-bottom: 16px;
 }
 
@@ -56,7 +57,7 @@ body {
 }
 
 .form-login a {
-  color: white;
+  color: rgb(255, 227, 227);
   text-decoration: none;
   font-size: 14px;
 }
