--- a/practica_5/templates/index.html
+++ b/practica_5/templates/index.html
@@ -8,8 +8,17 @@
 <body>
 
 <br><br><br>
-      <h1>Gestion de Albums <h1>   
-<br>
+      <h1>Gestion de Albums <h1>  
+
+        <br>
+        {% with mensajes= get_flashed_messages() %}
+           {%if mensaje %}
+            {% for msj in mensajes %}
+          <h3> {{msj}} </h3>
+            {%endfor%}
+           {%endif%}
+        {% endwith %} 
+        <br>
 
 <form action="/guardar" method="POST">
 
