--- a/practica_5/templates/index.html
+++ b/practica_5/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Albums</title>
+    <title>CRUD Album</title>
 </head>
 <body>
 
 <br><br><br>
-      <h1>Gestion de Albums <h1>  
+      <h1>Gestion de Album <h1>  
 
         <br>
         {% with mensajes= get_flashed_messages() %}
