--- a/practica_5/templates/index.html
+++ b/practica_5/templates/index.html
@@ -52,7 +52,7 @@
       <td>{{alb.2}} </td>
       <td>{{alb.3}} </td>
       <td>
-        <a href="#"> editar </a>
+        <a href=/editar/{{alb.0}}> editar </a>
         <a href="#"> borrar </a>
       </td>
      </tr>
