--- a/practica_5/templates/editarAlbum.html
+++ b/practica_5/templates/editarAlbum.html
@@ -10,7 +10,7 @@
     <br>
     <br>
     <br>
-    <form action="#" method="POST">
+    <form action="/actualizar/{{album.0}}" method="POST">
 
         <input type="text" name ="txtTitulo" value="{{album.1}}">
         <input type="text" name="txtArtista" value="{{album.2}}">
