--- a/practica_5/templates/index.html
+++ b/practica_5/templates/index.html
@@ -32,7 +32,7 @@
 </form>    
 <br>
 <br>
-
+<table>
 <h1>Album Guardar </h1>
  
  <thead>
@@ -53,10 +53,11 @@
       <td>{{alb.3}} </td>
       <td>
         <a href=/editar/{{alb.0}}> editar </a>
-        <a href="#"> borrar </a>
+        <a href= "#" > borrar </a>
       </td>
      </tr>
     {%endfor%}
+    <table>
    </tbody>
 
 </body>
